--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,6 @@ DerivedDataCache/*
 
 ###########
 
-!/Content/Assets/
-/Content/Assets/*
-!/Content/Assets/*.txt
-/Content/StarterContent/*
+Content/Assets/
+!Content/Assets/*.txt
+Content/StarterContent/*
