--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,11 @@ DerivedDataCache/*
 
 ###########
 
-Content/Assets/
-!Content/Assets/*.txt
+!/Content/Assets/
+/Content/Assets/*
+!/Content/Assets/*.txt
 Content/StarterContent/*
+
+Content/BMMCSystem/
+Content/ParagonSunWukong/
+Content/SpearAndHalberdAnimset/
