feat : add gitignore configuration
add gitignore configuration

--- a/.gitignore
+++ b/.gitignore
@@ -81,4 +81,13 @@ DerivedDataCache/*
 
 Content/Assets/
 !Content/Assets/*.txt
+
 Content/StarterContent/*
+
+Content/BMMCSystem/*
+
+Content/LongswordAnimsetPro/*
+
+Content/ParagonSunWukong/*
+
+Content/SpearAndHalberdAnimset/*
