--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,8 @@ Content/BMMCSystem/
 Content/ParagonSunWukong/
 Content/SpearAndHalberdAnimset/
 Content/LongswordAnimsetPro/
+Content/__ExternalActors__/
+Content/__ExternalObjects__/
+Content/ThirdPerson/
+Content/Characters/
+Content/LevelPrototyping/
