--- a/LegendOfWeapon.uproject
+++ b/LegendOfWeapon.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{3B68D5B0-40D8-A654-B2DF-A0A06C32C16E}",
+	"EngineAssociation": "5.1",
 	"Category": "",
 	"Description": "",
 	"Modules": [
