--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+EditorStartupMap=/Game/Maps/ServerTestMap.ServerTestMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
