Revert "Merge pull request #27 from LegendOfWeapon/DedicatedServer"
This reverts commit 692147544541a67b0d939db9cf40ce8d18b620fe, reversing
changes made to ad744a262463b3b000060924e20f33fb2ee9780e.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ServerTestMap.ServerTestMap
+EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
